added screenshots of waveform

--- a/Tex/document.tex
+++ b/Tex/document.tex
@@ -1,7 +1,68 @@
-\documentclass{article}
+\documentclass[12pt]{article}
+% \usepackage{tikz}
 
 \begin{document}
 
+\title{Implementation of the High Level Control FSM in a Security Device}
+\author{Connor Winiarczyk}
 
+% \maketitle
+
+\section{Abstract}
+
+
+\section{Introduction}
+When building a system as complex as a security system, it is important that the various parts and subsystems be capable of communicating with each other smoothly and without error test
+
+
+\section{System Design}
+
+\section{System Validation}
+
+\section{Summary}
+
+% \begin{center}
+% \begin{tikzpicture}[scale=0.2]
+% \tikzstyle{every node}+=[inner sep=0pt]
+% \draw [black] (31.7,-32) circle (3);
+% \draw (31.7,-32) node {$Base$};
+% \draw [black] (53.4,-22.1) circle (3);
+% \draw (53.4,-22.1) node {$E\mbox{ }Cur$};
+% \draw [black] (55,-42.8) circle (3);
+% \draw (55,-42.8) node {$NPass$};
+% \draw [black] (12.5,-32) circle (3);
+% \draw (12.5,-32) node {$Correct$};
+% \draw [black] (23.9,-48.6) circle (3);
+% \draw (23.9,-48.6) node {$Wrong$};
+% \draw [black] (15.35,-31.069) arc (104.83456:75.16544:26.364);
+% \fill [black] (15.35,-31.07) -- (16.25,-31.35) -- (16,-30.38);
+% \draw (22.1,-29.69) node [above] {$Enter\mbox{ } \& Match$};
+% \draw [black] (28.828,-32.861) arc (-76.32839:-103.67161:28.464);
+% \fill [black] (28.83,-32.86) -- (27.93,-32.56) -- (28.17,-33.54);
+% \draw [black] (31.908,-34.988) arc (-1.31594:-49.0198:16.209);
+% \fill [black] (26.33,-46.85) -- (27.27,-46.71) -- (26.61,-45.95);
+% \draw (31.09,-42.56) node [right] {$Enter\mbox{ } \& \mbox{ }!Match$};
+% \draw [black] (24.546,-45.671) arc (165.1136:144.55066:34.991);
+% \fill [black] (29.86,-34.37) -- (28.99,-34.73) -- (29.8,-35.31);
+% \draw [black] (34.43,-30.75) -- (50.67,-23.35);
+% \fill [black] (50.67,-23.35) -- (49.74,-23.22) -- (50.15,-24.13);
+% \draw (44.68,-27.57) node [below] {$new$};
+% \draw [black] (55.499,-24.236) arc (38.54047:-29.70073:14.422);
+% \fill [black] (56.75,-40.37) -- (57.58,-39.92) -- (56.71,-39.42);
+% \draw (59.21,-32.06) node [right] {$Enter\mbox{ } \& \mbox{ }Match$};
+% \draw [black] (52.28,-41.54) -- (34.42,-33.26);
+% \fill [black] (34.42,-33.26) -- (34.94,-34.05) -- (35.36,-33.14);
+% \draw (45.97,-36.88) node [above] {$Enter$};
+% \draw [black] (52.767,-19.18) arc (219.96376:-68.03624:2.25);
+% \draw (59.78,-14.59) node [above] {$!Enter\mbox{ }|\mbox{ }!Match$};
+% \fill [black] (55.33,-19.82) -- (56.27,-19.69) -- (55.62,-18.92);
+% \draw [black] (57.887,-42.029) arc (132.69007:-155.30993:2.25);
+% \draw (62.36,-44.44) node [right] {$!Enter$};
+% \fill [black] (57.37,-44.62) -- (57.54,-45.55) -- (58.28,-44.87);
+% \draw [black] (30.377,-29.32) arc (234:-54:2.25);
+% \draw (31.7,-24.75) node [above] {$!Enter\mbox{ } \& \mbox{ }!New$};
+% \fill [black] (33.02,-29.32) -- (33.9,-28.97) -- (33.09,-28.38);
+% \end{tikzpicture}
+% \end{center}
 
 \end{document}
